<?xml version="1.0"?>
<package format="3">
  <name>green_detector</name>
  <version>0.0.1</version>
  <description>绿灯识别 + 云台自瞄串口下发</description>
  <maintainer email="wenyu@example.com">wenyu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>